--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
+/* Design System Imports */
+@import './styles/tokens.css';
+@import './styles/canvas-common.css';
+
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Inter', system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
